# SLDM

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml
src/: app.rs  documentation.md  documentation.rs  explorer.rs  main.rs  menus.rs  settings.rs  side_panel.rs  viewer.rs
src-logic/: Cargo.toml
src-logic/src/: io_csv.rs  lib.rs  plotter.rs  prelude.rs  types.rs
src-logic/src/data/: mod.rs  mod_proj.rs  vec_proj.rs
src-logic/src/model/: mod.rs
src-logic/src/profile/: disp.rs  mod.rs
src-logic/src/project/: infile.rs  mod.rs
src-logic/src/slide/: disp.rs  mod.rs
src-logic/test_data/: dem2.csv  dem3.csv  disp2.csv  fiiileeee.toml  slbl.csv  slbl2.csv  slbl3.csv
src-logic/test_data/project_files/: empty_project.toml  project_file.toml  test_csv.csv
src-logic/test_data/project_files/test_proj/: project.toml  test_export_model.csv  test_export_surface.csv
src-logic/tests/: parts.rs  workflow.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
src-tauri/src/project/: infile.rs  mod.rs
src-tauri/src/slide/: disp.rs  mod.rs
src/app/: action_panel.rs  context_menu.rs  mod.rs  viewer.rs
src/components/: command.rs  documentation.rs  explorer.rs  mod.rs  nord.rs  settings.rs
src/project/: io.rs  mod.rs
