[package]
name = "SLDM"
version = "0.1.0"
authors = ["Léo Letellier"]
repository = "https://github.com/LeoLetellier/SLBL-FSA"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
eframe = { version = "0.29.1", features = ["wgpu"] }
egui = { version = "0.29.1", features = ["rayon"] }
egui-phosphor = "0.7.3"
egui_commonmark = { version = "0.18.0", features = ["macros"] }
egui_plot = "0.29.0"
env_logger = "0.11.5"
rfd = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

[workspace]
members = ["src-logic"]

[dependencies.src-logic]
path = "./src-logic"

[profile.release]
opt-level = "z"
debug = false
lto = true
panic = "abort"
strip = true

