[package]
name = "src-logic"
version = "0.1.0"
authors = ["Leo Letellier"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
assert_approx_eq = "1.1.0"
csv = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
ndarray = "0.15.6"
nnls = "0.3.0"
plotters = "0.3.7"
plotters-arrows = "0.1.0"
rust-csv = "0.1.0"
serde = "1.0.210"
thiserror = "1.0.64"
