[package]
name = "src-logic"
version = "0.1.0"
authors = ["Leo Letellier"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.92"
approx = "0.5.1"
assert_approx_eq = "1.1.0"
csv = "1.3.0"
env_logger = "0.11.5"
image = "0.25.2"
ndarray = "0.15.6"
nnls = "0.3.0"
plotters = { version = "0.3.7", features = ["svg_backend"] }
plotters-arrows = "0.1.0"
thiserror = "1.0.64"
