[package]
name = "slbl"
version = "0.1.0"
description = "A Tauri SLBL App"
authors = ["Leo Letellier"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
src-logic = { workspace = true }

